Añadidos containers, solo cambios esteticos

--- a/contacto.html
+++ b/contacto.html
@@ -17,124 +17,130 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-   <!-- AQUÍ COMIENZA EL NAVBAR-->
-   <nav class="navbar navbar-expand-md navbar-light bg-white">
-    <div class="container-fluid nav-tuneado">
-        <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto nav-ul">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
-                        data-value="inicio">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
-                        data-value="nosotros">Nosotros</a>
-                </li>
+    <!-- AQUÍ COMIENZA EL NAVBAR-->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <div class="container-fluid nav-tuneado">
+            <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto nav-ul">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
+                            data-value="inicio">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
+                            data-value="nosotros">Nosotros</a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
-                        Servicios
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
-                                data-value="servicio1">Estudios de
-                                suelos</a></li>
-                        <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
-                                data-value="servicio2">Control de
-                                calidad de materiales</a></li>
-                        <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
-                                data-value="servicio3">Laboratorio de suelos</a></li>
-                        <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
-                                data-value="servicio4">Perforación</a></li>
-                    </ul>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                            Servicios
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                    data-value="servicio1">Estudios de
+                                    suelos</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
+                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                    data-value="servicio4">Perforación</a></li>
+                        </ul>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" data-section="nav" data-value="idioma">
-                        Idioma
-                    </a>
-                    <ul class="dropdown-menu" id="idioma">
-                        <li><a class="dropdown-item" data-language="es" href="#"> <img
-                                    src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
-                                    width="30rem"> es</a></li>
-                        <li><a class="dropdown-item" data-language="en" href="#"> <img
-                                    src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
-                                    width="30rem"> en</a></li>
-                    </ul>
-                </li>
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav"
+                            data-value="proyectos">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="idioma">
+                            Idioma
+                        </a>
+                        <ul class="dropdown-menu" id="idioma">
+                            <li><a class="dropdown-item" data-language="es" href="#"> <img
+                                        src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
+                                        width="30rem"> es</a></li>
+                            <li><a class="dropdown-item" data-language="en" href="#"> <img
+                                        src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
+                                        width="30rem"> en</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<!-- AQUÍ TERMINA EL NAVBAR-->
+    </nav>
+    <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
         <h3 data-section="datos-contacto" data-value="titulo">CONTÁCTANOS</h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row container" style="padding-top: 2vh !important; padding-bottom: 10vh !important;">
-            <div class="col-md-5 descripcion-servicio">
-                <div>
-                    <h4 data-section="datos-contacto" data-value="tel">Llámanos o escríbenos a nuestro Whatsapp</h4>
-                    <img src="./img/icons/call_us_icon.png" class="d-inline" style="width:2rem !important; height: 2rem !important; "> <p class="d-inline">+505 8527-4908</p>
-                   <br>
-                    <a href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA" class="link-offset-3"
-                        target="_blank" >
-                        <img src="./img/icons/whatsappus_icon.png" class="d-inline" style="width:2rem !important; height: 2rem !important;">+xxxxxxx<p></p>
-                    </a>
+        <div class="container">
+            <div class="row" >
+                <div class="col-md-5 descripcion-servicio">
+                    <div>
+                        <h4 data-section="datos-contacto" data-value="tel">Llámanos o escríbenos a nuestro Whatsapp</h4>
+                        <img src="./img/icons/call_us_icon.png" class="d-inline"
+                            style="width:2rem !important; height: 2rem !important; ">
+                        <p class="d-inline">+505 8527-4908</p>
+                        <br>
+                        <a href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
+                            class="link-offset-3" target="_blank">
+                            <img src="./img/icons/whatsappus_icon.png" class="d-inline"
+                                style="width:2rem !important; height: 2rem !important;">+xxxxxxx<p></p>
+                        </a>
+
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 data-section="datos-contacto" data-value="email">Correo</h4>
+                        <a class="link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="mailto:jim@example.com">jim@example.com</a>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="fs-5">HORARIO</h4>
+                        <ul>
+                            <li>
+                                Lunes a Viernes:
+                            </li>
+                            <li>
+                                Sabados y Domingos:
+                            </li>
+                        </ul>
+                    </div>
+
+
 
                 </div>
-                <hr>
-                <div>
-                    <h4 data-section="datos-contacto" data-value="email">Correo</h4>
-                    <a class="link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                        href="mailto:jim@example.com">jim@example.com</a>
+
+
+                <div class="col-md text-center fs-4 descripcion-servicio ">
+                    <div class="col-md">
+                        <h4 data-section="datos-contacto" data-value="ubi">Nuestra ubicación</h4>
+                    </div>
+                    <div class="col-md embed-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.481758345692!2d-86.31128962469738!3d12.147569632408084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1706193445817!5m2!1sen!2sni"
+                            class="mapa" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+
+
                 </div>
-                <hr>
-                <div>
-                    <h4 class="fs-5">HORARIO</h4>
-                    <ul>
-                        <li>
-                            Lunes a Viernes:
-                        </li>
-                        <li>
-                            Sabados y Domingos:
-                        </li>
-                    </ul>
-                </div>
-
-
-
-            </div>
-
-
-            <div class="col-md text-center fs-4 descripcion-servicio ">
-                <div class="col-md">
-                    <h4 data-section="datos-contacto" data-value="ubi">Nuestra ubicación</h4>
-                </div>
-                <div class="col-md embed-container">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.481758345692!2d-86.31128962469738!3d12.147569632408084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1706193445817!5m2!1sen!2sni"
-                        class="mapa" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-
-
             </div>
         </div>
     </div>
