--- a/perforacion.html
+++ b/perforacion.html
@@ -17,8 +17,8 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-     <!-- AQUÍ COMIENZA EL NAVBAR-->
-     <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <!-- AQUÍ COMIENZA EL NAVBAR-->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
         <div class="container-fluid nav-tuneado">
             <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,7 +57,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav"
+                            data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -87,43 +88,48 @@
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row container">
-            <div class="col-md descripcion-servicio">
-                <p>Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios de
-                    suelos, brindando servicios a una variedad de clientes en el sector de la construcción. La empresa
-                    se ha especializado en perforaciones en roca y suelos, disponiendo del equipamiento adecuado para
-                    tales fines. En este aspecto, la firma cuenta con equipos portátiles y máquinas perforadoras
-                    rotativas, complementadas con sus respectivos accesorios.
+        <div class="container">
+            <div class="row ">
+                <div class="col-md descripcion-servicio">
+                    <p>Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios
+                        de
+                        suelos, brindando servicios a una variedad de clientes en el sector de la construcción. La
+                        empresa
+                        se ha especializado en perforaciones en roca y suelos, disponiendo del equipamiento adecuado
+                        para
+                        tales fines. En este aspecto, la firma cuenta con equipos portátiles y máquinas perforadoras
+                        rotativas, complementadas con sus respectivos accesorios.
 
-                </p>
+                    </p>
 
-            </div>
-
-
-            <div class="col-md descripcion-servicio" >
-                <h3 class="fs-5">Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
-                <div class="d-flex" style="height: fit-content;">
-                    <div class="vr"></div>
-                    <div>
-                        
-                        
-                        <ul>
-                            <li>
-                                Perforaciones profundas mediante máquina rotativa y con lodos bentoníticos.
-                            </li>
-
-                            <li>
-                                Perforación por roto-percusión.
-
-                            </li>
-                            <li>
-                                Ensayo de penetración estándar (SPT).
-
-                            </li>
-                        </ul>
-                    </div>
                 </div>
 
+
+                <div class="col-md descripcion-servicio">
+                    <h3 class="fs-5">Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
+                    <div class="d-flex" style="height: fit-content;">
+                        <div class="vr"></div>
+                        <div>
+
+
+                            <ul>
+                                <li>
+                                    Perforaciones profundas mediante máquina rotativa y con lodos bentoníticos.
+                                </li>
+
+                                <li>
+                                    Perforación por roto-percusión.
+
+                                </li>
+                                <li>
+                                    Ensayo de penetración estándar (SPT).
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
 
