--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -87,48 +87,53 @@
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row">
-            <div class="col-md descripcion-servicio">
-                <p>En Geonicsa, nuestro compromiso con la calidad va más allá de la geotecnia. Ofrecemos servicios
-                    especializados en el control de calidad de materiales, asegurando que cada componente utilizado en
-                    su proyecto cumpla con los más altos estándares. Desde la selección meticulosa de materiales hasta
-                    la supervisión en el sitio, nuestro equipo dedicado se asegura de que cada elemento contribuya a la
-                    excelencia y durabilidad de su proyecto.
-                </p>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
-                    <div class="card-body">
-                        <a href="control-calidad-del-concreto.html"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Control
-                                de calidad del concreto</h3>
-                        </a>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md descripcion-servicio">
+                    <p>En Geonicsa, nuestro compromiso con la calidad va más allá de la geotecnia. Ofrecemos servicios
+                        especializados en el control de calidad de materiales, asegurando que cada componente utilizado
+                        en
+                        su proyecto cumpla con los más altos estándares. Desde la selección meticulosa de materiales
+                        hasta
+                        la supervisión en el sitio, nuestro equipo dedicado se asegura de que cada elemento contribuya a
+                        la
+                        excelencia y durabilidad de su proyecto.
+                    </p>
                 </div>
             </div>
+            <div class="row justify-content-center">
 
-            <div class="col-md col-lg-3 ">
-                <div class="card" style="width: 100%; padding:0.5rem !important;">
-                    <div class="card-body">
-                        <a href="control-de-calidad-de-suelos.html"
-                            class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
-                                viewBox="0 0 16 16" style="width:2rem !important;">
-                                <path
-                                    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
-                            </svg>
-                            <h3 class="card-title fs-5">Control
-                                de calidad de los suelos</h3>
-                        </a>
+                <div class="col-md col-lg-3 ">
+                    <div class="card" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body">
+                            <a href="control-calidad-del-concreto.html"
+                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
+                                    viewBox="0 0 16 16" style="width:2rem !important;">
+                                    <path
+                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
+                                </svg>
+                                <h3 class="card-title fs-5">Control
+                                    de calidad del concreto</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md col-lg-3 ">
+                    <div class="card" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body">
+                            <a href="control-de-calidad-de-suelos.html"
+                                class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
+                                    viewBox="0 0 16 16" style="width:2rem !important;">
+                                    <path
+                                        d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
+                                </svg>
+                                <h3 class="card-title fs-5">Control
+                                    de calidad de los suelos</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,9 +144,9 @@
                 data-value="btn-contactanos">Contáctanos</a>
         </div>
         <!--CONTACTANOS-->
-        </div>
+    </div>
 
-        
+
     </div>
 
 
