añadida la traduccion de Control de calidad de materiales y Estudios de suelos

--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -82,71 +82,103 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 data-section="control-cal-suelos" data-value="titulo">Control de calidad de suelos </h3>
+        <h3 data-section="control-calidad-suelos" data-value="titulo">Control de calidad de suelos </h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row descripcion-servicio">
-            <p class="fs-5">
-                El control de calidad de los suelos mediante pruebas de compactación, utilizando métodos como el cono de
-                arena y el densímetro nuclear, es esencial en la ingeniería civil y la construcción para evaluar la
-                capacidad de soporte y la densidad de los suelos. A continuación, se describen brevemente ambos métodos:
+        <div class="container descripcion-servicio">
+            <div class="row ">
+                <p  data-section="control-calidad-suelos" data-value="resumen">
+                    El control de calidad de los suelos mediante pruebas de compactación, utilizando métodos como el
+                    cono de
+                    arena y el densímetro nuclear, es esencial en la ingeniería civil y la construcción para evaluar la
+                    capacidad de soporte y la densidad de los suelos. A continuación, se describen brevemente ambos
+                    métodos:
 
 
-            </p>
-        </div>
-        <div class="row descripcion-servicio">
-            <div class="col-md">
+                </p>
+            </div>
+            <div class="row ">
+                <div class="col-md">
 
-                <div class="card card-desc">
-                    <div class="card-body">
-                        <h4 class="text-center fs-5">Prueba de Compactación con Cono de Arena
-                        </h4>
-                        <p> Se realiza con el propósito de evaluar la densidad máxima y la humedad óptima de un suelo
-                            compactado.
-                            <br> <br>
-                            <b>Procedimiento:</b> <br>Se extrae una muestra representativa del suelo.
-                            Se mide la humedad inicial de la muestra.
-                            Se coloca una capa del suelo en el molde de compactación y se compacta utilizando el cono de
-                            arena.
-                            Se mide la densidad seca y la humedad después de la compactación.
-                            Se repite el proceso con diferentes contenidos de humedad para determinar la curva de
-                            compactación.
+                    <div class="card card-desc">
+                        <div class="card-body">
+                            <h4 class="text-center fs-5" data-section="control-calidad-suelos"
+                                data-value="metodo-1-titulo">Prueba de Compactación con Cono de Arena
+                            </h4>
+                            <div data-section="control-calidad-suelos" data-value="metodo-1-desc">
+                                <p> Se realiza con el
+                                    propósito de evaluar la densidad máxima y la humedad óptima de un
+                                    suelo
+                                    compactado.
+                                </p>
+                                <b>Procedimiento:</b> <br>
+                                <ol>
+                                    <li>Se extrae una muestra representativa del suelo.
+                                    </li>
+                                    <li>Se mide la humedad inicial de la muestra.
+                                    </li>
+                                    <li>Se coloca una capa del suelo en el molde de compactación y se compacta
+                                        utilizando el
+                                        cono de
+                                        arena.</li>
+                                    <li>Se mide la densidad seca y la humedad después de la compactación.
+                                    </li>
+                                    <li>Se repite el proceso con diferentes contenidos de humedad para determinar la
+                                        curva
+                                        de
+                                        compactación.</li>
+                                </ol>
+                                <p>
+                                    <b>Resultado:</b> Se obtienen datos que permiten identificar la humedad óptima y la
+                                    densidad
+                                    máxima del suelo compactado.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
 
-                        </p>
+                    <div class="card card-desc">
+                        <div class="card-body">
+                            <h4 class="text-center fs-5" data-section="control-calidad-suelos" data-value="metodo-2-titulo">Prueba de Compactación con Densímetro Nuclear</h4>
+                            <div data-section="control-calidad-suelos" data-value="metodo-2-desc">
+                                <p>  Medir la densidad in situ de un suelo y proporcionar información sobre la calidad de la compactación.
+
+
+                                </p>
+                                <b>Procedimiento:</b> <br>
+                                <ol>
+                                    <li>Se coloca el densímetro nuclear sobre la superficie del suelo compactado.
+
+                                    </li>
+                                    <li>Se emite una fuente de radiación gamma hacia el suelo.
+                                    </li>
+                                    <li>El densímetro mide la radiación dispersa, que está relacionada con la densidad del suelo.
+                                    </li>
+                                    <li>Se repite el proceso en varios puntos para obtener datos representativos.
+
+                                    </li>
+                                </ol>
+                                <p>
+                                    <b>Resultado:</b>  Se obtienen lecturas directas de la densidad del suelo sin necesidad de extraer muestras.
+
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md">
 
-                <div class="card card-desc">
-                    <div class="card-body">
-                        <h4 class="text-center fs-5">Prueba de Compactación con Densímetro Nuclear</h4>
-                        <p>
-                            Se realiza con el propósito de medir la densidad in situ de un suelo y proporcionar
-                            información sobre la calidad de la compactación.
-
-                            <br> <br>
-                            <b> Procedimiento:</b><br>
-                            Se coloca el densímetro nuclear sobre la superficie del suelo compactado.
-                            Se emite una fuente de radiación gamma hacia el suelo.
-                            El densímetro mide la radiación dispersa, que está relacionada con la densidad del suelo.
-                            Se repite el proceso en varios puntos para obtener datos representativos.
-
-
-                        </p>
-                    </div>
-                </div>
+            <!--CONTACTANOS-->
+            <div class="container text-center ">
+                <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
+                    data-value="btn-contactanos">Contáctanos</a>
             </div>
+            <!--CONTACTANOS-->
         </div>
-
-        <!--CONTACTANOS-->
-        <div class="container text-center ">
-            <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
-                data-value="btn-contactanos">Contáctanos</a>
-        </div>
-        <!--CONTACTANOS-->
     </div>
 
 
