--- a/estudios-geotecnicos.html
+++ b/estudios-geotecnicos.html
@@ -90,7 +90,7 @@
         <div class="container d-flex justify-content-center">
             <div class="row ">
                 <div class="col-md descripcion-servicio">
-                    <p>En Geonicsa, nos destacamos como líderes en el campo de la geotecnia, ofreciendo soluciones
+                    <p data-section="estudios-geotecnicos" data-value="info-1">En Geonicsa, nos destacamos como líderes en el campo de la geotecnia, ofreciendo soluciones
                         especializadas para proyectos de construcción y desarrollo. Nuestra experiencia en estudios de
                         suelos y evaluación geotécnica nos distingue como el socio confiable para comprender a fondo la
                         estabilidad del terreno. Desde la clasificación detallada de suelos hasta la evaluación precisa
@@ -104,8 +104,8 @@
                         <div>
                             <ul>
                                 <li>
-                                    <h3 class="fs-5">Estudios Geotécnicos de cimentación</h3>
-                                    <p>
+                                    <h3 class="fs-5" data-section="estudios-geotecnicos" data-value="estudios-cimentacion">Estudios Geotécnicos de cimentación</h3>
+                                    <p data-section="estudios-geotecnicos" data-value="estudios-cimentacion-desc">
                                         Los estudios geotécnicos de cimentación son evaluaciones especializadas que se
                                         llevan a cabo para comprender las características geológicas y geotécnicas del
                                         suelo
@@ -119,8 +119,8 @@
                                 </li>
 
                                 <li>
-                                    <h3 class="fs-5"> Diseño de espesores de pavimento</h3>
-                                    <p>
+                                    <h3 class="fs-5" data-section="estudios-geotecnicos" data-value="disenio-espesores-pav"> Diseño de espesores de pavimento</h3>
+                                    <p data-section="estudios-geotecnicos" data-value="disenio-espesores-pav-desc">
                                         El diseño de espesores de pavimento es un proceso ingenieril que implica
                                         determinar
                                         las dimensiones adecuadas y el tipo de capas que componen un pavimento para
@@ -132,9 +132,9 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <h3 class="fs-5"> Pruebas de Infiltracion</h3>
+                                    <h3 class="fs-5" data-section="estudios-geotecnicos" data-value="pruebas-infiltracion"> Pruebas de Infiltracion</h3>
 
-                                    <p>
+                                    <p data-section="estudios-geotecnicos" data-value="pruebas-infiltracion-desc">
                                         Las pruebas de infiltración son procedimientos utilizados para evaluar la
                                         capacidad
                                         de un suelo para absorber agua y permitir su paso hacia las capas subyacentes.
