--- a/laboratorio-de-suelos.html
+++ b/laboratorio-de-suelos.html
@@ -90,7 +90,7 @@
         <div class="container descripcion-servicio">
             <div class="row ">
                 <div class="col-md ">
-                    <p>
+                    <p data-section="laboratorio-suelos" data-value="resumen">
 
                         Trabajamos conforme a las especificaciones de obra de la industria de la construcción en
                         Nicaragua,
