--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md descripcion-servicio">
-                    <p class="lh-base"> <strong>GEONICSA</strong>, una firma consultora con más de dos décadas de experiencia, se
+                    <p class="lh-base" data-section="nosotros" data-value="info-1"> <strong>GEONICSA</strong>, una firma consultora con más de dos décadas de experiencia, se
                         estableció con el compromiso de realizar nuestro trabajo con los estándares de calidad y
                         excelencia que nos han definido desde nuestra fundación hasta la actualidad.
                         <br><br>
