Añadidos los servicios del laboratorio de suelos

--- a/laboratorio-de-suelos.html
+++ b/laboratorio-de-suelos.html
@@ -118,10 +118,10 @@
                 <div class="col-md ">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="fs-5">Preparación de Muestras:</h3>
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-1-titulo">Preparación de Muestras</h3>
                         </div>
                         <div class="card-body">
-                            <p>Los laboratorios de suelos reciben muestras de suelos tomadas de sitios específicos, ya
+                            <p data-section="laboratorio-suelos" data-value="actividad-1-desc">Los laboratorios de suelos reciben muestras de suelos tomadas de sitios específicos, ya
                                 sea durante la exploración del subsuelo o como parte de proyectos de construcción. La
                                 preparación de estas muestras es una fase inicial crítica.
                             </p>
@@ -134,10 +134,10 @@
                     <div class="col-md ">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="fs-5">Análisis de Granulometría:</h3>
+                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-2-titulo">Análisis de Granulometría:</h3>
                             </div>
                             <div class="card-body">
-                                <p>Se determina la distribución de tamaños de partículas en una muestra de suelo. Esto
+                                <p data-section="laboratorio-suelos" data-value="actividad-2-desc">Se determina la distribución de tamaños de partículas en una muestra de suelo. Esto
                                     es esencial para clasificar el suelo según sistemas de clasificación como el sistema
                                     de clasificación de suelos unificado (USCS).
 
@@ -152,10 +152,10 @@
                     <div class="col-md ">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="fs-5">Límites de Atterberg:</h3>
+                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-3-titulo">Límites de Atterberg:</h3>
                             </div>
                             <div class="card-body">
-                                <p>Se realizan pruebas para determinar los límites de plasticidad y límites de liquidez
+                                <p data-section="laboratorio-suelos" data-value="actividad-3-desc">Se realizan pruebas para determinar los límites de plasticidad y límites de liquidez
                                     del suelo. Estos límites son importantes para comprender el comportamiento del suelo
                                     bajo diferentes condiciones de humedad.
                                 </p>
@@ -169,10 +169,10 @@
                 <div class="col-md ">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="fs-5">Pruebas de Compactación:</h3>
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-4-titulo">Pruebas de Compactación:</h3>
                         </div>
                         <div class="card-body">
-                            <p>Se llevan a cabo pruebas de compactación para evaluar la densidad máxima y la humedad
+                            <p data-section="laboratorio-suelos" data-value="actividad-4-desc">Se llevan a cabo pruebas de compactación para evaluar la densidad máxima y la humedad
                                 óptima del suelo bajo condiciones específicas de compactación. Esto es esencial para el
                                 diseño de terraplenes y cimentaciones.
                             </p>
@@ -185,10 +185,10 @@
                     <div class="col-md ">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="fs-5">Pruebas de Corte Directo y Triaxiales:</h3>
+                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-5-titulo">Pruebas de Corte Directo y Triaxiales:</h3>
                             </div>
                             <div class="card-body">
-                                <p>Se realizan pruebas para evaluar la resistencia al corte del suelo en diferentes
+                                <p data-section="laboratorio-suelos" data-value="actividad-5-desc">Se realizan pruebas para evaluar la resistencia al corte del suelo en diferentes
                                     condiciones de esfuerzo. Esto es crucial para el diseño de estructuras de retención,
                                     muros de contención y otros elementos geotécnicos.
 
@@ -202,7 +202,7 @@
                     <div class="col-md ">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="fs-5">Pruebas de Consolidación:</h3>
+                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-6-titulo">Pruebas de Consolidación:</h3>
                             </div>
                             <div class="card-body">
                                 <p>Se realizan pruebas de consolidación para evaluar la compresibilidad y la capacidad
